파이썬 기초 공부

--- a/Python/정리.md
+++ b/Python/정리.md
@@ -1,6 +1,31 @@
 # 파이썬 문법 정리
 ## input 
-  - 용도
-    - 입력 함수
+  - 용도 입력 함수
   - 특징
     - 문자열로 리턴함
+## type
+    - 자료형 확인
+## divmod
+    - 몫과 나머지를 한번에 구함
+## hex
+    - 10진수 -> 16진수
+    - 특징
+      - 문자열 반환
+## bin
+    - 10진수 -> 2진수
+    - 특징
+      - 문자열 반환
+## int
+    - 정수로 변환
+    - 특징
+      - 문자열 변환시 두번째 인자로 진수를 지정해줘야됨 0b,0o,0x인 경우 두번째 인자가 0이여도 됨
+## abs
+    - 절대값 함수
+    - 특징
+      - 복소수는 크기를 반환함
+## round
+    - 반올림 함수
+    - 특징
+      - 음수는 정수를 양수는 소수점 자리를 반올림
+## float
+    - 실수로 변환
