--- a/DataAnalysis/1012_string.ipynb
+++ b/DataAnalysis/1012_string.ipynb
@@ -209,10 +209,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "10dda732",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PI is 3.141592 and Euler's number is 2.718281.\n",
+      "PI is 3.141592 and Euler's number is 2.718281.\n",
+      "PI is 3.141592 and Euler's number is 2.718281.\n",
+      "===Padding===\n",
+      "PI is   3.141592 and Euler's number is 2.718281.\n",
+      "PI is   3.141592 and Euler's number is 2.718281.\n",
+      "PI is 3.141592   and Euler's number is 2.718281.\n"
+     ]
+    }
+   ],
    "source": [
     "num_pi = \"3.141592\"\n",
     "num_e = \"2.718281\"\n",
@@ -278,10 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5ff6f0be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 100 200 300\n",
+      "10.5 151.2\n",
+      "(1.1+3.14j) 1.1 3.14\n"
+     ]
+    }
+   ],
    "source": [
     "# Integer Literals\n",
     "a = 0b1010 # Binary Literals\n",
@@ -311,10 +335,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f3e4068c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Python\n",
+      "C\n",
+      "This is a multiline string with more than one line code.\n",
+      "Ünicöde\n",
+      "raw \\n string\n"
+     ]
+    }
+   ],
    "source": [
     "# String Literals\n",
     "strings = \"This is Python\"\n",
@@ -340,10 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0efd3f90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is True\n",
+      "y is False\n",
+      "a: 5\n",
+      "b: 10\n"
+     ]
+    }
+   ],
    "source": [
     "# Boolean Literals\n",
     "x = (1 == True)\n",
@@ -360,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -374,11 +421,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4ed7c5303468c6f42560d32e811323012438a4f036415de2c7ac2fb5dad5e44a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
