--- a/MachineLearning/03_feature_engineering.ipynb
+++ b/MachineLearning/03_feature_engineering.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {
     "id": "3kjaTfOqEVwY"
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -75,6 +75,80 @@
     "id": "8qmTS1RzKRKT",
     "outputId": "25aa3409-3306-4751-fba7-bd3bcc9e3cad"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    length   height   width\n",
+      "0      8.4     2.11    1.41\n",
+      "1     13.7     3.53    2.00\n",
+      "2     15.0     3.82    2.43\n",
+      "3     16.2     4.59    2.63\n",
+      "4     17.4     4.59    2.94\n",
+      "5     18.0     5.22    3.32\n",
+      "6     18.7     5.20    3.12\n",
+      "7     19.0     5.64    3.05\n",
+      "8     19.6     5.14    3.04\n",
+      "9     20.0     5.08    2.77\n",
+      "10    21.0     5.69    3.56\n",
+      "11    21.0     5.92    3.31\n",
+      "12    21.0     5.69    3.67\n",
+      "13    21.3     6.38    3.53\n",
+      "14    22.0     6.11    3.41\n",
+      "15    22.0     5.64    3.52\n",
+      "16    22.0     6.11    3.52\n",
+      "17    22.0     5.88    3.52\n",
+      "18    22.0     5.52    4.00\n",
+      "19    22.5     5.86    3.62\n",
+      "20    22.5     6.79    3.62\n",
+      "21    22.7     5.95    3.63\n",
+      "22    23.0     5.22    3.63\n",
+      "23    23.5     6.28    3.72\n",
+      "24    24.0     7.29    3.72\n",
+      "25    24.0     6.38    3.82\n",
+      "26    24.6     6.73    4.17\n",
+      "27    25.0     6.44    3.68\n",
+      "28    25.6     6.56    4.24\n",
+      "29    26.5     7.17    4.14\n",
+      "30    27.3     8.32    5.14\n",
+      "31    27.5     7.17    4.34\n",
+      "32    27.5     7.05    4.34\n",
+      "33    27.5     7.28    4.57\n",
+      "34    28.0     7.82    4.20\n",
+      "35    28.7     7.59    4.64\n",
+      "36    30.0     7.62    4.77\n",
+      "37    32.8    10.03    6.02\n",
+      "38    34.5    10.26    6.39\n",
+      "39    35.0    11.49    7.80\n",
+      "40    36.5    10.88    6.86\n",
+      "41    36.0    10.61    6.74\n",
+      "42    37.0    10.84    6.26\n",
+      "43    37.0    10.57    6.37\n",
+      "44    39.0    11.14    7.49\n",
+      "45    39.0    11.14    6.00\n",
+      "46    39.0    12.43    7.35\n",
+      "47    40.0    11.93    7.11\n",
+      "48    40.0    11.73    7.22\n",
+      "49    40.0    12.38    7.46\n",
+      "50    40.0    11.14    6.63\n",
+      "51    42.0    12.80    6.87\n",
+      "52    43.0    11.93    7.28\n",
+      "53    43.0    12.51    7.42\n",
+      "54    43.5    12.60    8.14\n",
+      "55    44.0    12.49    7.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('https://bit.ly/perch_csv_data')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,7 +214,6 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('https://bit.ly/perch_csv_data')\n",
     "perch_full = df.to_numpy()\n",
     "print(perch_full)\n",
     "# {length}, {height}, {width}"
@@ -148,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "id": "PsRC7rvE9SbL"
    },
@@ -170,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "id": "cRKkoWoZ9J0m"
    },
@@ -192,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "id": "EclugdXmSs-L"
    },
@@ -211,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -224,19 +297,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 2. 3. 4. 6. 9.]]\n"
+      "[[  1.  20.   3. 400.  60.   9.]]\n"
      ]
     }
    ],
    "source": [
     "poly = PolynomialFeatures()\n",
-    "poly.fit([[2, 3]])\n",
-    "print(poly.transform([[2, 3]]))"
+    "poly.fit([[20, 3]])\n",
+    "print(poly.transform([[20, 3]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -286,7 +359,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.96000000e+01, 5.14000000e+00, 3.04000000e+00, 3.84160000e+02,\n",
+       "        1.00744000e+02, 5.95840000e+01, 2.64196000e+01, 1.56256000e+01,\n",
+       "        9.24160000e+00, 7.52953600e+03, 1.97458240e+03, 1.16784640e+03,\n",
+       "        5.17824160e+02, 3.06261760e+02, 1.81135360e+02, 1.35796744e+02,\n",
+       "        8.03155840e+01, 4.75018240e+01, 2.80944640e+01, 1.47578906e+05,\n",
+       "        3.87018150e+04, 2.28897894e+04, 1.01493535e+04, 6.00273050e+03,\n",
+       "        3.55025306e+03, 2.66161618e+03, 1.57418545e+03, 9.31035750e+02,\n",
+       "        5.50651494e+02, 6.97995264e+02, 4.12822102e+02, 2.44159375e+02,\n",
+       "        1.44405545e+02, 8.54071706e+01],\n",
+       "       [2.20000000e+01, 5.88000000e+00, 3.52000000e+00, 4.84000000e+02,\n",
+       "        1.29360000e+02, 7.74400000e+01, 3.45744000e+01, 2.06976000e+01,\n",
+       "        1.23904000e+01, 1.06480000e+04, 2.84592000e+03, 1.70368000e+03,\n",
+       "        7.60636800e+02, 4.55347200e+02, 2.72588800e+02, 2.03297472e+02,\n",
+       "        1.21701888e+02, 7.28555520e+01, 4.36142080e+01, 2.34256000e+05,\n",
+       "        6.26102400e+04, 3.74809600e+04, 1.67340096e+04, 1.00176384e+04,\n",
+       "        5.99695360e+03, 4.47254438e+03, 2.67744154e+03, 1.60282214e+03,\n",
+       "        9.59512576e+02, 1.19538914e+03, 7.15607101e+02, 4.28390646e+02,\n",
+       "        2.56451543e+02, 1.53522012e+02],\n",
+       "       [1.87000000e+01, 5.20000000e+00, 3.12000000e+00, 3.49690000e+02,\n",
+       "        9.72400000e+01, 5.83440000e+01, 2.70400000e+01, 1.62240000e+01,\n",
+       "        9.73440000e+00, 6.53920300e+03, 1.81838800e+03, 1.09103280e+03,\n",
+       "        5.05648000e+02, 3.03388800e+02, 1.82033280e+02, 1.40608000e+02,\n",
+       "        8.43648000e+01, 5.06188800e+01, 3.03713280e+01, 1.22283096e+05,\n",
+       "        3.40038556e+04, 2.04023134e+04, 9.45561760e+03, 5.67337056e+03,\n",
+       "        3.40402234e+03, 2.62936960e+03, 1.57762176e+03, 9.46573056e+02,\n",
+       "        5.67943834e+02, 7.31161600e+02, 4.38696960e+02, 2.63218176e+02,\n",
+       "        1.57930906e+02, 9.47585434e+01],\n",
+       "       [1.74000000e+01, 4.59000000e+00, 2.94000000e+00, 3.02760000e+02,\n",
+       "        7.98660000e+01, 5.11560000e+01, 2.10681000e+01, 1.34946000e+01,\n",
+       "        8.64360000e+00, 5.26802400e+03, 1.38966840e+03, 8.90114400e+02,\n",
+       "        3.66584940e+02, 2.34806040e+02, 1.50398640e+02, 9.67025790e+01,\n",
+       "        6.19402140e+01, 3.96741240e+01, 2.54121840e+01, 9.16636176e+04,\n",
+       "        2.41802302e+04, 1.54879906e+04, 6.37857796e+03, 4.08562510e+03,\n",
+       "        2.61693634e+03, 1.68262487e+03, 1.07775972e+03, 6.90329758e+02,\n",
+       "        4.42172002e+02, 4.43864838e+02, 2.84305582e+02, 1.82104229e+02,\n",
+       "        1.16641925e+02, 7.47118210e+01],\n",
+       "       [3.60000000e+01, 1.06100000e+01, 6.74000000e+00, 1.29600000e+03,\n",
+       "        3.81960000e+02, 2.42640000e+02, 1.12572100e+02, 7.15114000e+01,\n",
+       "        4.54276000e+01, 4.66560000e+04, 1.37505600e+04, 8.73504000e+03,\n",
+       "        4.05259560e+03, 2.57441040e+03, 1.63539360e+03, 1.19438998e+03,\n",
+       "        7.58735954e+02, 4.81986836e+02, 3.06182024e+02, 1.67961600e+06,\n",
+       "        4.95020160e+05, 3.14461440e+05, 1.45893442e+05, 9.26787744e+04,\n",
+       "        5.88741696e+04, 4.29980393e+04, 2.73144943e+04, 1.73515261e+04,\n",
+       "        1.10225529e+04, 1.26724777e+04, 8.05018847e+03, 5.11388033e+03,\n",
+       "        3.24859127e+03, 2.06366684e+03]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_poly[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "id": "__kE6eJdNZfm"
    },
@@ -300,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -330,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -346,7 +483,7 @@
        "       'x2^2'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {
     "id": "DJMPxe2mgbOo"
    },
@@ -377,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -390,7 +527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9903183436982124\n"
+      "0.9903183436982125\n"
      ]
     }
    ],
@@ -404,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -417,7 +554,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9714559911594122\n"
+      "0.9714559911594223\n"
      ]
     }
    ],
@@ -427,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {
     "id": "2fDt5mrReMwU"
    },
@@ -442,7 +579,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['x0', 'x1', 'x2', ..., 'x1^2 x2^98', 'x1 x2^99', 'x2^100'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -455,7 +613,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(42, 55)\n"
+      "(42, 176850)\n"
      ]
     }
    ],
@@ -465,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -478,7 +636,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.999999999999815\n"
+      "0.9225840307435733\n"
      ]
     }
    ],
@@ -489,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -502,7 +660,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-144.40613927413557\n"
+      "-3795024059892440.5\n"
      ]
     }
    ],
@@ -518,7 +676,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.10 64-bit",
+   "display_name": "Python 3.9.12",
    "language": "python",
    "name": "python3"
   },
@@ -532,11 +690,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b8bdd4e700647ba2b08c59e5df8b7da1dcf50a218bcd4c1bcd9b3dc92e8788e5"
+    "hash": "944403805d0ad9e60724c31aa78bfb982f0a917c2fd50cf0dcd52b6ced6d4d77"
    }
   }
  },
