--- a/MachineLearning/03_linear_regression.ipynb
+++ b/MachineLearning/03_linear_regression.ipynb
@@ -879,7 +879,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.9.12",
    "language": "python",
    "name": "python3"
   },
@@ -893,11 +893,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4ed7c5303468c6f42560d32e811323012438a4f036415de2c7ac2fb5dad5e44a"
+    "hash": "944403805d0ad9e60724c31aa78bfb982f0a917c2fd50cf0dcd52b6ced6d4d77"
    }
   }
  },
