--- a/Python/LangChain/02.Open API 사용.ipynb
+++ b/Python/LangChain/02.Open API 사용.ipynb
@@ -92,6 +92,21 @@
    },
    "id": "f807d8de614331b0",
    "execution_count": 27
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 프롬프트 템플릿의 할용\n",
+    "PromptTemplate\n",
+    "- 사용자의 입력 변수를 사용하여 완전한 프롬프트 문자열을 만드는 데 사용되는 템플릿\n",
+    "사용법\n",
+    "- template : 템플릿 문자열 -> 이 문자열 내에서 중괄호 {}는 변수를 나타냄\n",
+    "- input_variables : 중괄호 안에 들어갈 변수의 이름을 리스트로 정의함"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a854f6b00af7a414"
   }
  ],
  "metadata": {
