--- a/Python/LangChain/01.OpenAI API 키 발급 및 테스트.ipynb
+++ b/Python/LangChain/01.OpenAI API 키 발급 및 테스트.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-04-25T10:12:16.947907Z",
-     "start_time": "2024-04-25T10:12:16.924377Z"
-    }
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
@@ -28,29 +15,16 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[API KEY]\n",
-      "sk-proj-AATX20GBthk1Hot05A0tT3BlbkFJKWDlG4v1QQDeHIjSGonb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "print(f\"[API KEY]\\n{os.environ['OPENAI_API_KEY']}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-25T10:12:49.822437Z",
-     "start_time": "2024-04-25T10:12:49.804432Z"
-    }
+    "collapsed": false
    },
    "id": "c2ca44c646c338fb",
-   "execution_count": 2
+   "execution_count": null
   }
  ],
  "metadata": {
