Update 2장 미로찾기를 위한 강화학습 구현.ipynb
.

--- a/Python/PyTorch를 활용한 강화학습및심층강화학습 입문/2장 미로찾기를 위한 강화학습 구현.ipynb
+++ b/Python/PyTorch를 활용한 강화학습및심층강화학습 입문/2장 미로찾기를 위한 강화학습 구현.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-01T04:44:05.467061Z",
-     "start_time": "2024-07-01T04:44:05.463952Z"
+     "end_time": "2024-07-02T05:55:58.013012Z",
+     "start_time": "2024-07-02T05:55:56.942803Z"
     }
    },
    "outputs": [],
@@ -70,12 +70,208 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-01T04:47:04.069363Z",
-     "start_time": "2024-07-01T04:47:04.007794Z"
+     "end_time": "2024-07-02T05:55:58.159569Z",
+     "start_time": "2024-07-02T05:55:58.014024Z"
     }
    },
    "id": "91fb5ddd4a2da0f3",
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# 정책을 결정하는 파마리터의 초깃값 theta_0을 설정\n",
+    "\n",
+    "# 줄은 상태 0~7, 열은 행동 방향(상, 우, 하, 좌순)을 나타냄\n",
+    "theta_0 = np.array([[np.nan, 1, 1, np.nan], # s0\n",
+    "                    [np.nan, 1, np.nan, 1], # s1\n",
+    "                    [np.nan, np.nan, 1, 1], # s2 \n",
+    "                    [1, 1, 1, np.nan], # s3\n",
+    "                    [np.nan, np.nan, 1, 1], # s4\n",
+    "                    [1, np.nan, np.nan, np.nan], # s5\n",
+    "                    [1, np.nan, np.nan, np.nan], # s6\n",
+    "                    [1, 1, np.nan, np.nan], # s7\n",
+    "                    # s8은 목표 지점이라 정책이 없음\n",
+    "                     ])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T05:55:58.163422Z",
+     "start_time": "2024-07-02T05:55:58.159569Z"
+    }
+   },
+   "id": "791400e3d3db1020",
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# 정책 파마리터 theta를 행동 정책 pi로 변환하는 함수\n",
+    "\n",
+    "def simple_convert_into_pi_from_theta(theta):\n",
+    "    '''단순히 값의 비율을 계산'''\n",
+    "    [m ,n] = theta.shape # theta의 행렬 크기를 구함\n",
+    "    pi = np.zeros((m, n))\n",
+    "    for i in range(0, m):\n",
+    "        pi[i, :] = theta[i, :] / np.nansum(theta[i, :]) # 비율 계산\n",
+    "        \n",
+    "    pi = np.nan_to_num(pi)\n",
+    "    \n",
+    "    return pi"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T05:55:58.167386Z",
+     "start_time": "2024-07-02T05:55:58.164432Z"
+    }
+   },
+   "id": "2cd768a5f44d15b7",
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# 초기 정책 pi_0을 계산\n",
+    "\n",
+    "pi_0 = simple_convert_into_pi_from_theta(theta_0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T05:55:58.171186Z",
+     "start_time": "2024-07-02T05:55:58.168391Z"
+    }
+   },
+   "id": "64605ce9019bd0d2",
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.5        0.5        0.        ]\n",
+      " [0.         0.5        0.         0.5       ]\n",
+      " [0.         0.         0.5        0.5       ]\n",
+      " [0.33333333 0.33333333 0.33333333 0.        ]\n",
+      " [0.         0.         0.5        0.5       ]\n",
+      " [1.         0.         0.         0.        ]\n",
+      " [1.         0.         0.         0.        ]\n",
+      " [0.5        0.5        0.         0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 초기 정책 pi_0을 출력\n",
+    "print(pi_0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T05:55:58.176278Z",
+     "start_time": "2024-07-02T05:55:58.172192Z"
+    }
+   },
+   "id": "5084849f7005a2b9",
    "execution_count": 7
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# 1단계 이동 후의 상태 s를 계산하는 함수\n",
+    "\n",
+    "def get_next_s(pi, s):\n",
+    "    direction = [\"up\", \"right\", \"down\", \"left\"]\n",
+    "    \n",
+    "    # pi[s, :] 확률에 따라, direction의 값이 선택 됨\n",
+    "    next_direction = np.random.choice(direction, p=pi[s, :])\n",
+    "    \n",
+    "    if next_direction == \"up\":\n",
+    "        # 위로 이동하면 상태값이 3만큼 줄어듬\n",
+    "        s_next = s - 3\n",
+    "    elif next_direction == \"right\":\n",
+    "        # 오른쪽으로 이동하면 상태값이 1만큼 늘어남\n",
+    "        s_next = s + 1\n",
+    "    elif next_direction == \"down\":\n",
+    "        # 아래로 이동하면 상태값이 3만큼 늘어남\n",
+    "        s_next = s + 3\n",
+    "    elif next_direction == \"left\":\n",
+    "        # 왼쪽으로 이동하면 상태값이 1만큼 줄어듬\n",
+    "        s_next = s - 1\n",
+    "        \n",
+    "    return s_next\n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T05:55:58.180262Z",
+     "start_time": "2024-07-02T05:55:58.177282Z"
+    }
+   },
+   "id": "ffd4e794b4fb5992",
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# 목표 지점에 이를 때까지 에이전트를 계속 이동시키는 함수\n",
+    "\n",
+    "def goal_maze(pi):\n",
+    "    # 시작 지점\n",
+    "    s = 0\n",
+    "    \n",
+    "    # 에이전트의 경로를 기록하는 리스트\n",
+    "    state_history = [0]\n",
+    "    \n",
+    "    # 목표 지점에 이를 때까지 반복\n",
+    "    while(1):\n",
+    "        next_s = get_next_s(pi, s)\n",
+    "        state_history.append(next_s)    # 경로 리스트에 다음 상태(위치)를 추가\n",
+    "        \n",
+    "        # 목표 지점에 이르면 종료\n",
+    "        if next_s == 8:\n",
+    "            break\n",
+    "        else:\n",
+    "            s = next_s\n",
+    "            \n",
+    "    return state_history"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T05:59:02.484441Z",
+     "start_time": "2024-07-02T05:59:02.481461Z"
+    }
+   },
+   "id": "882a0b687e542d2f",
+   "execution_count": 10
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# 목표 지점에 이를 때까지 미로 안을 이동\n",
+    "state_history = goal_maze(pi_0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T06:00:03.880361Z",
+     "start_time": "2024-07-02T06:00:03.870893Z"
+    }
+   },
+   "id": "85d809e549b09729",
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -84,7 +280,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "791400e3d3db1020"
+   "id": "8c2f41e6d4cc76c1"
   }
  ],
  "metadata": {
